freegeek-extras (1.2.30) UNRELEASED; urgency=low

  * don't fail to install if cups isn't installed

 -- Ryan Niebur <ryan@debian.org>  Wed, 07 Sep 2011 00:59:11 -0700

freegeek-extras (1.2.29) freegeek-test; urgency=low

  * send dmidecode Maximum Capacity for memory as :max_capacity

 -- Ryan Niebur <ryan@debian.org>  Tue, 06 Sep 2011 23:51:42 -0700

freegeek-extras (1.2.28) freegeek-test; urgency=low

  * Rebuild fix

 -- Ryan Niebur <ryan@debian.org>  Wed, 27 Jul 2011 11:11:10 -0700

freegeek-extras (1.2.27) freegeek-test; urgency=low

  * Remove the Linux specific Google search box, Google doesn't have
    that feature anymore
  * Add Dell-fix scripts

 -- Ryan Niebur <ryan@debian.org>  Tue, 26 Jul 2011 14:11:10 -0700

freegeek-extras (1.2.26) freegeek-test; urgency=low

  [ Vagrant Cascadian ]
  * basiccheck: do not hard-code the display when checking for resolution.
  * basiccheck: added spanish translation by Ricardo Varela.
  * install locale files into correct location.

  [ Ryan Niebur]
  * fix exploding translations

 -- Vagrant Cascadian <vagrant@debian.org>  Sat, 25 Jun 2011 15:33:52 -0700

freegeek-extras (1.2.25) freegeek-test; urgency=low

  * printme compat 14, supports ignoring previous systems if they've
    been sold
  * change the error message on macs to direct them to redownload the
    script

 -- Ryan Niebur <ryan@debian.org>  Fri, 08 Apr 2011 20:03:54 -0700

freegeek-extras (1.2.24) freegeek-test; urgency=low

  * freegeek-extras-pdx: Depend on version of ubufox in lucid, to prevent 
    upgrades on hardy systems (works around RT: #22505).

 -- Vagrant Cascadian <vagrant@debian.org>  Thu, 07 Apr 2011 12:59:10 -0700

freegeek-extras (1.2.23) freegeek-test; urgency=low

  * fixes from 1.2.17 to 1.2.21 (Closes: #21844, #20587, #20739, #21122)

  [ Vagrant Cascadian ]
  * freegeek-extras-pdx: preinst/postrm: assign the appropriate package name to
    the aboutHome.js dpkg diversion.